<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_here_hint">Search here …</string>
    <string name="title_activity_top_ten_track">Top Ten Tracks</string>
    <string name="key_spotify_artist_id">SPOTIFY_ARTIST_ID</string>
    <string name="key_spotify_playback_track_single">SPOTIFY_PLAYBACK_TRACK_SINGLE</string>
    <string name="key_spotify_playback_tracks">SPOTIFY_PLAYBACK_TRACKS</string>
    <string name="title_activity_playback">PlaybackActivity</string>
    <string name="currently_playing_album_img">Album Image currently playing</string>
    <string name="skip_to_previous">Skip to previous button</string>
    <string name="play_and_pause_button">Play and pause button</string>
    <string name="skip_next_button">Skip to next button</string>
    <string name="no_artist_found">No search result found. Please refine search terms.</string>
    <string name="key_track_list">key_top_ten_tracks</string>
    <string name="artist_image">Artist image</string>
    <string name="album_cover_image">Album cover image</string>
    <string name="key_artist_search_result">key_artist_search_result</string>
    <string name="language__category">Language Selection</string>
    <string name="title_language_preference">Country</string>
    <string name="summary_language_preference">%s</string>
    <string name="key_language_default_value">US</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="dialog_title_country_list_preference">Available Countries</string>
    <string name="key_country_code">key_country_list_preference</string>
    <string name="key_show_notification">key_show_notification_preference</string>
    <string name="show_notification_on_playback">Show notification on playback</string>
    <string name="key_playback_position">key_playback_position</string>
    <string name="key_fragment_playback">KEY_FRAGMENT_PLAYBACK</string>
    <string name="action_share">Share Track</string>
    <string name="share_track_text">Playing %1$s by %2$s:\n\n</string>
    <string name="share_current_playing_track">Share current playing track</string>
    <string name="key_media_session">SPOTIFY_MEDIA_SESSION</string>
    <string name="open_play_activity">Playing</string>
    <string name="notification">Notification</string>
    <string name="unstable_playback">Might lead to unstable playback</string>
</resources>
