<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/language__category">

        <ListPreference
            android:defaultValue="@string/key_language_default_value"
            android:dialogTitle="@string/dialog_title_country_list_preference"
            android:entries="@array/entries_list_options_preference"
            android:entryValues="@array/entries_list_values_preference"
            android:key="@string/key_country_code"
            android:summary="@string/summary_language_preference"
            android:title="@string/title_language_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">
        <CheckBoxPreference
            android:key="@string/key_show_notification"
            android:defaultValue="true"
            android:title="@string/show_notification_on_lockscreen"/>
    </PreferenceCategory>
</PreferenceScreen>