<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="net.malwasandres.spotifystreamer.PlaybackActivityFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipPreviousButton"
        android:src="@drawable/ic_av_skip_previous"
        android:contentDescription="@string/skip_to_previous"
        android:layout_gravity="left|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipNextButton"
        android:src="@drawable/ic_av_skip_next"
        android:contentDescription="@string/skip_next_button"
        android:layout_gravity="right|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/playbackAlbumImageView"
        android:layout_alignEnd="@+id/playbackAlbumImageView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playButton"
        android:src="@drawable/ic_av_pause"
        android:contentDescription="@string/play_and_pause_button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_gravity="bottom|center_horizontal"
        android:max="100"
        android:layout_above="@+id/playbackStartTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <TextView tools:text="Band Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playbackBandNameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView tools:text="Album Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playbackAlbumNameTextView"
        android:layout_below="@+id/playbackBandNameTextView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@mipmap/ic_launcher"
        android:id="@+id/playbackAlbumImageView"
        android:contentDescription="@string/currently_playing_album_img"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/playbackAlbumNameTextView"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0:00"
        android:id="@+id/playbackStartTextView"
        android:layout_above="@+id/skipPreviousButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0:30"
        android:id="@+id/playbackEndTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/skipNextButton" />


</RelativeLayout>
